# Bugs_and_Glitches_hackgenx

./: README.md
app/: pubspec.yaml
app/android/app/: build.gradle.kts
app/lib/: main.dart  qr_code_page.dart  readings_details.dart  store_devices.dart
backend/: .env  .gitignore  main.py  pyproject.toml  requirements.txt
backend/config/: database.py
backend/controller/: api.py  model_api.py
backend/js/: index.js  package-lock.json  package.json
backend/js/apis/: apis.js
backend/js/config/: socket.js
backend/js/controller/: apiController.js
backend/model/: air_quality_model.py
backend/py/server/: main.py
backend/schema/: air_quality_model.py  device_model.py  reading_model.py
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/[id]/: page.tsx
frontend/src/app/readings/: page.tsx
frontend/src/types/: index.ts  types.ts
iot/: device.cpp
model/: air_quality_forecast_model.pkl  air_quality_model.pkl  main.py  pollution_data.csv
test/: .gitignore  index.js  package.json
